Overflowing div fixed

--- a/style/style.css
+++ b/style/style.css
@@ -22,8 +22,6 @@ body{
     background-color: rgb(14,40,63);
     overflow: auto;
     position: relative;
-    height: 100vh;
-
 }
 /* width */
 ::-webkit-scrollbar {
@@ -108,7 +106,7 @@ body{
 }
 .comments-container{
     width: 100%;
-    height: 91vh;
+    height: 100vh;
     position: relative;
     display: flex;
     align-items: start;
@@ -564,9 +562,10 @@ backdrop-filter: blur(6.8px);
     z-index: 1;
     height: 4rem;
     justify-content: space-evenly;
-    /* position: absolute;
+    position: absolute;
     left: 0;
-    right: 0; */
+    right: 0;
+    bottom: 0;
 }
 footer .ico{
     font-size: 1.5rem;
